--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,11 @@ test =
 docs =
     sphinx-astropy
 
+[options.entry_points]
+console_scripts =
+    PUstats = pulsarutils.stats:main
+    PUsearchfrb = pulsarutils.clean:main_search
+
 [options.package_data]
 pulsarutils = data/*
 
