More or less working

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ docs =
 console_scripts =
     PUstats = pulsarutils.stats:main
     PUsearchfrb = pulsarutils.clean:main_search
+    PUclean = pulsarutils.clean:main_clean
 
 [options.package_data]
 pulsarutils = data/*
